--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="video-container">
             <h2>Featured Video</h2>
             <video controls>
-                <source src="video.mp4" type="video/mp4">
+                <source src="martin.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
